# biolearn

./: .gitignore  LICENSE  README.md  experiments.md  main.py  pyproject.toml  run_hill.sh  run_hill_no_mlp.sh  run_laub.sh  run_quadrotor.sh
biolearn/: __init__.py
biolearn/losses/: __init__.py  activations.py  base.py  leaky_conjunction.py  relu_integral.py  slack_relu.py  slack_softmax.py  soft_relu.py  ss_classification.py
biolearn/models/: __init__.py  activations.py  (+5 more)
matlab/: BNN.m  BioTransmission.m  HAquadrocopterControlledSimplified.m  example_stl_Gene.m  example_stl_Hill.m  example_stl_laubLoomis.m  example_stl_quadrotor.m  hill_model_bounds.csv  hill_traj_state_1.csv  hill_traj_state_2.csv  hill_traj_state_3.csv  hill_traj_state_4.csv  hill_traj_state_5.csv  hill_traj_state_6.csv  laubLoomis_stl.m  laubloomis_model_bounds.csv  laubloomis_traj_state_1.csv  laubloomis_traj_state_2.csv  laubloomis_traj_state_3.csv  laubloomis_traj_state_4.csv  laubloomis_traj_state_5.csv  laubloomis_traj_state_6.csv  laubloomis_traj_state_7.csv  quadrocopterControlledSimplified.m  quadrotor_reachsets.m  quadrotor_verify_reachsets.m  reachable_bounds_export.csv
scripts/: __init__.py  plot.py  plot_compare.py  plot_hill.py  plot_perturbed_quadrotor.py  plot_quad.py  plot_residual_norm.py  plot_robustness_landscape.py  plot_training_curves.py  plot_trajectories.py  sigmoid_combination_loss.py  slack_relu.py  ss_classification.py  test.py  train_hk25.py  train_quadrotor.py  train_scratch.py  train_xor.py  train_xor_scratch.py  trainer.py  training_suite.py
tests/: test_hill.py
(+13 files in other folders)
