[project]
name = "biolearn"
version = "0.1.0"
description = "A testing platform for learning of biological models with STL."
authors = [
    {name = "Alex Beaudin", email = "48172047+Beau-Coup@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beartype>=0.22.9",
    "diffrax>=0.7.0",
    "equinox>=0.13.4",
    "jax>=0.9.0",
    "numpy>=2.4.1",
]
