[project]
name = "biolearn"
version = "0.1.1"
description = "A testing platform for learning of biological models with STL."
authors = [
    {name = "Alex Beaudin", email = "48172047+Beau-Coup@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beartype>=0.22.9",
    "diffrax>=0.7.0",
    "equinox>=0.13.4",
    "jax>=0.9.0",
    "numpy>=2.4.1",
    "optax>=0.2.7",
    "pystl",
]

[tool.setuptools]
packages = ["biolearn"]

[tool.uv.sources]
pystl = { git = "https://github.com/ericpalto/PySTL.git" }

[dependency-groups]
dev = [
    "matplotlib>=3.10.8",
    "pandas>=3.0.0",
    "tqdm>=4.67.3",
    "tyro>=0.9.0",
    "wandb>=0.19.0",
]
